Implement region and language settings

--- a/LightTube/Views/Account/Account.cshtml
+++ b/LightTube/Views/Account/Account.cshtml
@@ -29,7 +29,7 @@
             <br>
             @if (Context.TryGetUser(out LTUser user))
             {
-            	<!--div class="guide-item"><a href="/Account/ContentSettings">Content Settings</a></div-->
+            	<div class="guide-item"><a href="/Account/ContentSettings">Content Settings</a></div>
             	@if (user.PasswordHash != "local_account")
             	{
             		<div class="guide-item"><a href="/Account/Logins">Active logins</a></div>
