--- a/LightTube/Views/Shared/_LoginLogoutPartial.cshtml
+++ b/LightTube/Views/Shared/_LoginLogoutPartial.cshtml
@@ -1,7 +1,7 @@
 @if (Context.TryGetUser(out LTUser user))
 {
 	<div class="guide-item"><a>@user.Email.Split("@")[0]</a></div>
-	<!--div class="guide-item"><a href="/Account/ContentSettings">Settings</a></div-->
+	<div class="guide-item"><a href="/Account/ContentSettings">Settings</a></div>
 	@if (user.PasswordHash != "local_account")
 	{
 		<div class="guide-item"><a href="/Account/Logins">Active logins</a></div>
