--- a/LightTube/Views/Youtube/Search.cshtml
+++ b/LightTube/Views/Youtube/Search.cshtml
@@ -1,4 +1,4 @@
-@using InnerTube.Models
+@using YTProxy.Models
 @model LightTube.Contexts.SearchContext
 
 @{
@@ -9,11 +9,12 @@
 }
 
 <div class="video-list">
-	@foreach (DynamicItem preview in Model.Results.Results)
+	@foreach (ItemPreview preview in Model.Results.Results)
 	{
-		switch (preview)
+		Preview itemPreview = preview.GetPreview();
+		switch (preview.GetPreview())
 		{
-			case VideoItem video:
+			case VideoPreview video:
 				<div class="video">
 					<a href="/watch?v=@video.Id" class="thumbnail"
 					   style="background-image: url('@video.Thumbnails.LastOrDefault()?.Url')"><span class="video-length">@video.Duration</span></a>
@@ -30,7 +31,7 @@
 					</div>
 				</div>
 				break;
-			case PlaylistItem playlist:
+			case PlaylistPreview playlist:
 				<div class="playlist">
 					<a href="/watch?v=@playlist.FirstVideoId&amp;list=@playlist.Id" class="thumbnail" style="background-image: url('@playlist.Thumbnails.LastOrDefault()?.Url')">
 						<div>
@@ -50,7 +51,7 @@
 					</div>
 				</div>
 				break;
-			case ChannelItem channel:
+			case ChannelPreview channel:
 				<div class="channel">
 					<a href="/channel/@channel.Id" class="avatar">
 						<img src="@channel.Thumbnails.LastOrDefault()?.Url" alt="Channel Avatar">
@@ -69,14 +70,15 @@
 					<button class="subscribe-button" data-cid="@channel.Id">Subscribe</button>
 				</div>
 				break;
-			case { } item:
+			default:
 				<div class="video">
 					<span class="thumbnail"
-					   style="background-image: url('@item.Thumbnails?.LastOrDefault()?.Url')"></span>
+					   style="background-image: url('@itemPreview.Thumbnails.LastOrDefault()?.Url')"><span class="video-length">@preview.Type</span></span>
 					<div class="info">
-						<span class="title max-lines-2">
-							<b>WARNING:</b> Unknown result type: @item.Id (@item.GetType().Name)
-						</span>
+						<span class="title max-lines-2">@itemPreview.Title</span>
+						<div>
+							<b>WARNING:</b> Unknown result type: @preview.Type
+						</div>
 					</div>
 				</div>
 				break;
@@ -84,7 +86,7 @@
 	}
 </div>
 <div class="pagination-buttons">
-	@if (!string.IsNullOrWhiteSpace(Model.ContinuationKey))
+	@if (!string.IsNullOrWhiteSpace(Model.ContinuationToken))
 	{
 		<a href="/results?search_query=@Model.Query">First Page</a>
 	}
