--- a/LightTube/Views/Youtube/Watch.cshtml
+++ b/LightTube/Views/Youtube/Watch.cshtml
@@ -2,7 +2,7 @@
 @using System.Globalization
 @using System.Text.RegularExpressions
 @using System.Web
-@using YTProxy.Models
+@using InnerTube.Models
 @model LightTube.Contexts.PlayerContext
 
 @{
@@ -12,12 +12,12 @@
 
 	ViewBag.Metadata = new Dictionary<string, string>();
 	ViewBag.Metadata["author"] = Model.Video.Channel.Name;
-	ViewBag.Metadata["og:title"] = Model.Video.Title;
+	ViewBag.Metadata["og:title"] = Model.Player.Title;
 	ViewBag.Metadata["og:url"] = $"{Url.ActionContext.HttpContext.Request.Scheme}://{Url.ActionContext.HttpContext.Request.Host}{Url.ActionContext.HttpContext.Request.Path}{Url.ActionContext.HttpContext.Request.QueryString}";
 	ViewBag.Metadata["og:image"] = $"{Url.ActionContext.HttpContext.Request.Scheme}://{Url.ActionContext.HttpContext.Request.Host}/proxy/image?url={HttpUtility.UrlEncode(Model.Player.Thumbnails.FirstOrDefault()?.Url?.ToString())}";
 	ViewBag.Metadata["twitter:card"] = $"{Url.ActionContext.HttpContext.Request.Scheme}://{Url.ActionContext.HttpContext.Request.Host}/proxy/image?url={HttpUtility.UrlEncode(Model.Player.Thumbnails.LastOrDefault()?.Url?.ToString())}";
 	ViewBag.Metadata["og:description"] = Model.Player.Description;
-	ViewBag.Title = Model.Video.Title;
+	ViewBag.Title = Model.Player.Title;
 
 	Layout = "_Layout";
 	try
@@ -31,20 +31,16 @@
 	ViewData["DisableOldCss"] = true;
 	ViewData["HideGuide"] = true;
 
-	//TODO: this wont be necessary when the API is merged into LightTube, don't forget to delete this
-	Model.Player.Formats ??= Array.Empty<Format>();
-	Model.Player.AdaptiveFormats ??= Array.Empty<Format>();
 	bool live = Model.Player.Formats.Length == 0 && Model.Player.AdaptiveFormats.Length > 0;
-	string description = Model.Video.GetHtmlDescription();
-	const string youtubePattern = @"(www.)?youtube\.com";
+	string description = Model.Player.GetHtmlDescription();
+	const string youtubePattern = @"[w.]*youtu[.]*be[-nockie]*[.com]*";
 
 	// turn URLs into hyperlinks
 	Regex urlRegex = new(youtubePattern, RegexOptions.IgnoreCase);
 	Match m;
 	for (m = urlRegex.Match(description); m.Success; m = m.NextMatch())
 		description = description.Replace(m.Groups[0].ToString(),
-			$"{Url.ActionContext.HttpContext.Request.Host}")
-			.Replace($"{Url.ActionContext.HttpContext.Request.Host}//", $"{Url.ActionContext.HttpContext.Request.Host}/");
+			$"{Url.ActionContext.HttpContext.Request.Host}/");
 }
 
 <!-- TODO: chapters -->
@@ -61,7 +57,7 @@
 							@:<source label='@format.Resolution.Split("x")[1]P' src='/proxy/hls?url=@HttpUtility.UrlEncode(format.Url.ToString())' type="application/x-mpegURL">
 						}
 
-						@foreach (Subtitle subtitle in Model.Player.Subtitles)
+						@foreach (Subtitle subtitle in Model.Player.Subtitles ?? Array.Empty<Subtitle>())
 						{
 							@:<track src="/proxy/subtitle?url=@HttpUtility.UrlEncode(subtitle.Url.ToString())" label="@subtitle.Language" kind="subtitles">
 						}
@@ -70,7 +66,7 @@
 				else
 				{
 					<video id="player" class="video-js player" src="/proxy/video?url=@HttpUtility.UrlEncode(Model.Player.Formats.First(x => x.FormatNote == Model.Resolution).Url.ToString())" poster="@Model.Player.Thumbnails.LastOrDefault()?.Url" controls>
-						@foreach (Subtitle subtitle in Model.Player.Subtitles)
+						@foreach (Subtitle subtitle in Model.Player.Subtitles ?? Array.Empty<Subtitle>())
 						{
 							@:<track src="/proxy/subtitle?url=@HttpUtility.UrlEncode(subtitle.Url.ToString())" label="@subtitle.Language" kind="subtitles">
 						}
@@ -105,22 +101,22 @@
 			}
 		</div>
 		<div class="video-info">
-			<div class="video-title">@Model.Video.Title</div>
+			<div class="video-title">@Model.Player.Title</div>
 			<div class="video-info-bar">
-				<span>@Model.Video.Engagement.Views views</span>
+				<span>@Model.Engagement.Views views</span>
 				<span>Published @DateTimeOffset.Parse(Model.Player.UploadDate, null, DateTimeStyles.RoundtripKind).ToString("MMM dd, yyyy")</span>
 				<div class="divider"></div>
 				<div class="engagement-container">
 					<div class="engagement-info">
 						<span class="likes">
-							<img src="icons/like.svg">@Model.Video.Engagement.Likes
+							<img src="icons/like.svg">@Model.Engagement.Likes
 						</span>
 						<span class="dislikes">
-							<img src="icons/dislike.svg">@Model.Video.Engagement.Dislikes
+							<img src="icons/dislike.svg">@Model.Engagement.Dislikes
 						</span>
 					</div>
 					<div class="engagement-bar">
-						<div style="width: @(Model.Video.Engagement.GetLikePercentage().ToString().Split(".")[0])%"></div>
+						<div style="width: @(Model.Engagement.GetLikePercentage().ToString().Split(".")[0])%"></div>
 					</div>
 				</div>
 				<a href="https://www.youtube.com/watch?v=@Model.Player.Id">YouTube link</a>
@@ -163,12 +159,11 @@
 			{
 				<p style="text-align: center">None :(<br>This is most likely an age-restricted video</p>
 			}
-			@foreach (ItemPreview recommendation in Model.Video.Recommended)
+			@foreach (DynamicItem recommendation in Model.Video.Recommended)
 			{
-				Preview itemPreview = recommendation.GetPreview();
-				switch (itemPreview)
+				switch (recommendation)
 				{
-					case VideoPreview video:
+					case VideoItem video:
 						<div class="video">
 							<a href="/watch?v=@video.Id" class="thumbnail" style="background-image: url('@video.Thumbnails.LastOrDefault()?.Url')">
 								<span class="video-length">@video.Duration</span>
@@ -186,7 +181,7 @@
 							</div>
 						</div>
 						break;
-					case PlaylistPreview playlist:
+					case PlaylistItem playlist:
 						<div class="playlist">
 							<a href="/watch?v=@playlist.FirstVideoId&list=@playlist.Id" class="thumbnail" style="background-image: url('@playlist.Thumbnails.LastOrDefault()?.Url')">
 								<div>
@@ -202,13 +197,30 @@
 							</div>
 						</div>
 						break;
+					case RadioItem radio:
+						<div class="playlist">
+							<a href="/watch?v=@radio.FirstVideoId&list=@radio.Id" class="thumbnail" style="background-image: url('@radio.Thumbnails.LastOrDefault()?.Url')">
+								<div>
+									<span>MIX</span>
+								</div>
+							</a>
+							<div class="info">
+								<a href="/watch?v=@radio.FirstVideoId&list=@radio.Id" class="title max-lines-2">@radio.Title</a>
+								<div>
+									<span>@radio.Channel.Name</span>
+								</div>
+							</div>
+						</div>
+						break;
+					case ContinuationItem continuationItem:
+						break;
 					default:
 						<div class="video">
-							<div class="thumbnail" style="background-image: url('@itemPreview.Thumbnails.LastOrDefault()?.Url')"></div>
+							<div class="thumbnail" style="background-image: url('@recommendation.Thumbnails?.LastOrDefault()?.Url')"></div>
 							<div class="info">
-								<span class="title max-lines-2">@itemPreview.Title</span>
+								<span class="title max-lines-2">@recommendation.GetType().Name</span>
 								<div>
-									<b>WARNING:</b> Unknown recommendation type: @recommendation.Type
+									<b>WARNING:</b> Unknown recommendation type: @recommendation.Id
 								</div>
 							</div>
 						</div>
@@ -273,7 +285,7 @@
 				enableModifiersForNumbers: false,
 				enableVolumeScroll: false
 			});
-			this.on("error", e => {if (confirm("Something has gone wrong while trying to play this video. Enable compatibility mode?")) {window.location = "/toggles/compatibility?redirectUrl=" + encodeURIComponent(window.location.href)}})
+			this.on("error", () => {if (confirm("Something has gone wrong while trying to play this video. Enable compatibility mode?")) {window.location = "/toggles/compatibility?redirectUrl=" + encodeURIComponent(window.location.href)}})
 		});
 		</script>
 	}
