--- a/LightTube/Views/Youtube/Watch.cshtml
+++ b/LightTube/Views/Youtube/Watch.cshtml
@@ -32,7 +32,7 @@
 	ViewData["HideGuide"] = true;
 
 	bool live = Model.Player.Formats.Length == 0 && Model.Player.AdaptiveFormats.Length > 0;
-	string description = Model.Player.GetHtmlDescription();
+	string description = Model.Video.GetHtmlDescription();
 	const string youtubePattern = @"[w.]*youtu[.]*be[-nockie]*[.com]*";
 
 	// turn URLs into hyperlinks
@@ -40,7 +40,7 @@
 	Match m;
 	for (m = urlRegex.Match(description); m.Success; m = m.NextMatch())
 		description = description.Replace(m.Groups[0].ToString(),
-			$"{Url.ActionContext.HttpContext.Request.Host}/");
+			$"{Url.ActionContext.HttpContext.Request.Host}");
 }
 
 <!-- TODO: chapters -->
@@ -101,7 +101,7 @@
 			}
 		</div>
 		<div class="video-info">
-			<div class="video-title">@Model.Player.Title</div>
+			<div class="video-title">@Model.Video.Title</div>
 			<div class="video-info-bar">
 				<span>@Model.Engagement.Views views</span>
 				<span>Published @DateTimeOffset.Parse(Model.Player.UploadDate, null, DateTimeStyles.RoundtripKind).ToString("MMM dd, yyyy")</span>
