--- a/LightTube/Views/Shared/_Layout.cshtml
+++ b/LightTube/Views/Shared/_Layout.cshtml
@@ -125,8 +125,9 @@
 	<hr class="hide-on-minmode">
 	<p class="hide-on-minmode">
 		<a href="https://gitlab.com/kuylar/lighttube/-/blob/master/README.md">About</a><br>
-		<a href="https://gitlab.com/kuylar/lighttube/-/blob/master/OTHERLIBS.md">Libraries LightTube use</a><br>
+		<a href="https://gitlab.com/kuylar/lighttube/-/blob/master/OTHERLIBS.md">How LightTube works</a><br>
 		<a href="https://gitlab.com/kuylar/lighttube">Source code</a>
+		<a href="https://gitlab.com/kuylar/lighttube/-/blob/master/API.md">API</a>
 	</p>
 </div>
 
