Small CSS update

--- a/LightTube/wwwroot/css/desktop.css
+++ b/LightTube/wwwroot/css/desktop.css
@@ -646,6 +646,10 @@ a.icon-button, a.icon-button > img {
     row-gap: 8px;
 }
 
+.playlist > .thumbnail > div > * {
+    color: #fff;
+}
+
 .playlist > .thumbnail > div > *:nth-child(1) {
     font-size: x-large;
 }
