--- a/LightTube/Views/Youtube/Watch.cshtml
+++ b/LightTube/Views/Youtube/Watch.cshtml
@@ -33,7 +33,7 @@
 
 	bool live = Model.Player.Formats.Length == 0 && Model.Player.AdaptiveFormats.Length > 0;
 	string description = Model.Video.GetHtmlDescription();
-	const string youtubePattern = @"[w.]*youtu[.]*be[-nockie]*[.com]*";
+	const string youtubePattern = @"[w.]*youtube[-nockie]*\.com";
 
 	// turn URLs into hyperlinks
 	Regex urlRegex = new(youtubePattern, RegexOptions.IgnoreCase);
