--- a/LightTube/Views/Youtube/Watch.cshtml
+++ b/LightTube/Views/Youtube/Watch.cshtml
@@ -329,7 +329,7 @@
 				{
 					foreach (Format format in Model.Player.Formats.Reverse().GroupBy(x => x.FormatNote).Select(g => g.First()))
 					{
-						NameValueCollection query = HttpUtility.ParseQueryString(format.Url.Query);
+						NameValueCollection query = HttpUtility.ParseQueryString(format.Url.Split("?")[1]);
 
 						@:{src: '/proxy/video?url=@HttpUtility.UrlEncode(format.Url.ToString())',type: '@query.Get("mime")',label: '@format.FormatNote', selected: @(format.FormatNote.StartsWith("720p") ? "true" : "false")},
 					}
