--- a/LightTube/Views/Youtube/Embed.cshtml
+++ b/LightTube/Views/Youtube/Embed.cshtml
@@ -78,12 +78,13 @@
 }
 
 
-<script src="/js/shaka-player/shaka-player.compiled.min.js"></script>
 <script src="/js/lt-video/player-desktop.js"></script>
 @if (!Model.CompatibilityMode && !live)
 {
-    <script>
-    const player = loadPlayerWithShaka("video", {
+<script src="/js/shaka-player/shaka-player.compiled.min.js"></script>
+<script>
+    let player = undefined;
+    loadPlayerWithShaka("video", {
         "id": "@Model.Video.Id",
         "title": "@Model.Video.Title",
         "embed": true,
@@ -94,24 +95,20 @@
         {
             @:{"height": @f.Resolution.Split("x")[1],"label":"@f.FormatNote","src": "/proxy/video?url=@HttpUtility.UrlEncode(f.Url)"},
         }
-    ], "https://@(Context.Request.Host)/manifest/@(Model.Video.Id).mpd");
+    ], "https://@(Context.Request.Host)/manifest/@(Model.Video.Id).mpd").then(x => player = x).catch(alert);;
 </script>
 }
 else if (live)
 {
-    <script>
-    const player = loadPlayerWithShaka("video", {
-        "id": "@Model.Video.Id",
-        "title": "@Model.Video.Title",
+<script src="/js/hls.js/hls.min.js"></script>
+<script>
+    let player = undefined;
+    loadPlayerWithHls("video", {
+        "id": "@(Model.Video.Id)",
+        "title": "@(Model.Video.Title)",
         "embed": true,
-        "live": true,
-        "storyboard": "/proxy/image?url=@HttpUtility.UrlEncode(Model.Player.Storyboards.FirstOrDefault(x => x.FormatId == "sb2")?.Url)"
-    }, [
-        @foreach(Format f in Model.Player.AdaptiveFormats.Reverse())
-        {
-            @:{"height": @f.Resolution.Split("x")[1],"label":"@f.FormatNote","src": "/proxy/hls?url=@HttpUtility.UrlEncode(f.Url)"},
-        }
-    ], "/proxy/hls?url=@HttpUtility.UrlEncode(Model.Player.AdaptiveFormats.TakeWhile(x => int.Parse(x.FormatId) < 96).First().Url)");
+        "live": true
+    }, "https://@(Context.Request.Host)/manifest/@(Model.Video.Id).m3u8").then(x => player = x).catch(alert);
 </script>
 }
 else
