--- a/LightTube/Views/Account/Account.cshtml
+++ b/LightTube/Views/Account/Account.cshtml
@@ -27,7 +27,7 @@
             <div class="guide-item"><a href="/toggles/compatibility?redirectUrl=@(HttpUtility.UrlEncode($"{Context.Request.Path}{Context.Request.QueryString}"))">@(compatibility ? "Disable" : "Enable") compatibility mode</a></div>
             <div class="guide-item"><a href="/toggles/theme?redirectUrl=@(HttpUtility.UrlEncode($"{Context.Request.Path}{Context.Request.QueryString}"))">Switch to @(newTheme) theme</a></div>
             <br>
-            @if (Context.TryGetUser(out LTUser user))
+            @if (Context.TryGetUser(out LTUser user, "web"))
             {
             	<div class="guide-item"><a href="/Account/ContentSettings">Content Settings</a></div>
             	@if (user.PasswordHash != "local_account")
