--- a/LightTube/Views/Youtube/Watch.cshtml
+++ b/LightTube/Views/Youtube/Watch.cshtml
@@ -109,10 +109,10 @@
 				<div class="engagement-container">
 					<div class="engagement-info">
 						<span class="likes">
-							<img src="icons/like.svg">@Model.Engagement.Likes
+							<i class="bi bi-hand-thumbs-up"></i>@Model.Engagement.Likes
 						</span>
 						<span class="dislikes">
-							<img src="icons/dislike.svg">@Model.Engagement.Dislikes
+							<i class="bi bi-hand-thumbs-down"></i>@Model.Engagement.Dislikes
 						</span>
 					</div>
 					<div class="engagement-bar">
