--- a/LightTube/wwwroot/css/desktop.css
+++ b/LightTube/wwwroot/css/desktop.css
@@ -174,6 +174,8 @@ a.icon-button, a.icon-button > img {
     height: 24px;
     width: 24px;
     margin-right: 24px;
+    line-height: 24px;
+    text-align: center;
 }
 
 .guide-item.active {
@@ -221,7 +223,7 @@ a.icon-button, a.icon-button > img {
 }
 
 .guide.minmode > .guide-item > a > .icon {
-    width: 24px;
+    font-size: initial;
     margin-right: 0;
 }
 
@@ -970,6 +972,16 @@ a.icon-button, a.icon-button > img {
 }
 
 .horizontal-channel-list > .channel > img {
+    width: 72px;
+    height: 72px;
+    border-radius: 50%;
+    background-color: var(--thumbnail-background);
+}
+
+.horizontal-channel-list > .channel > i {
+    font-size: 36px;
+    line-height: 72px;
+    text-align: center;
     width: 72px;
     height: 72px;
     border-radius: 50%;
